# WebRTCVADSegmentation

./: CMakeLists.txt  LICENSE  README.md  RingBuffer.h  vadSplit.cpp  vadSplit.h
test/: main.cpp
